chore: auto sync repositories [2026-08-29 20:16]